--- a/docs/assets/css/app.css
+++ b/docs/assets/css/app.css
@@ -5699,7 +5699,7 @@ table .badge {
 
 .inspect-card .link {
   margin-top: 10px;
-  display: block;
+  display: inline-block;
 }
 
 .card--transparent {
@@ -5814,7 +5814,7 @@ table .badge {
 }
 
 .link {
-  display: block;
+  display: inline-block;
 }
 
 .input-title {
