--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -112,7 +112,7 @@ $purple:  #6f42c1;
 $pink:    #e83e8c;
 $red:     #EC0C1B;
 $orange:  #f1734f;
-$yellow:  #f1b44c;
+$yellow:  #F58220;
 $green:   #008081;
 $teal:    #050505;
 $cyan:    #50a5f1;
