--- a/src/assets/scss/custom/styles.scss
+++ b/src/assets/scss/custom/styles.scss
@@ -1057,3 +1057,32 @@ svg.active {
 .ml-20 {
   margin-left: 20px;
 }
+.width-50 {
+  width: 50px;
+  border-radius: 50px;
+}
+.select-dark {
+  background-color: $black;
+  background-image: url('../images/shape.svg');
+  color: #fff;
+  option {
+    background-color: #fff;
+    color: $black;
+    border: 1px solid $black;
+  }
+}
+.form-control--fill {
+  background-color: #E8E8E8;
+}
+.ml-10 {
+  margin-left: 10px;
+}
+svg {
+  fill: $black;
+}
+.button-wrapper {
+  flex-wrap: wrap;
+  .btn {
+    margin-bottom: 20px;
+  }
+}
