--- a/src/assets/scss/custom/styles.scss
+++ b/src/assets/scss/custom/styles.scss
@@ -1,5 +1,12 @@
 /* Custom css for inspector webpages */
 @import url('https://fonts.cdnfonts.com/css/century-gothic-paneuropean');
+body {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 500;
+}
+.vertical-menu {
+  font-weight: 400;
+}
 .title {
   color: $black;
   font-family: "Poppins";
@@ -10,7 +17,9 @@
   text-transform: uppercase;
   margin-bottom: 0;
 }
-
+p {
+  font-weight: 300;
+}
 .active {
   color: #EC1C24 !important;
   text-decoration-color: #EC1C24 !important;
@@ -1085,4 +1094,7 @@ svg {
   .btn {
     margin-bottom: 20px;
   }
+}
+.nowrap {
+  white-space: nowrap;
 }
