--- a/docs/assets/css/app.css
+++ b/docs/assets/css/app.css
@@ -6170,3 +6170,38 @@ td {
 .text-right {
   text-align: left;
 }
+
+.pt-0 {
+  padding-top: 0;
+}
+
+.text-left {
+  text-align: right;
+}
+
+.width-100 {
+  width: 100%;
+}
+
+.table-title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.td-blank {
+  height: 65px;
+}
+
+.width-360 {
+  width: 360px;
+  max-width: 100%;
+}
+
+.event-card p.mb-0 {
+  height: auto;
+  min-height: auto;
+}
